Button position and style

--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
     </head>
     <body>
         <canvas style="border:1px solid grey;" id="mycanvas"></canvas>
-        <input type="button" value="Style!" onclick="doDeepStyle();" />
+
+        <br />
+        <br />
+
+        <input type="button" style="width: 100%;" value="Style!" onclick="doDeepStyle();" />
         
     </body>
 
